WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53821
WebKit2 doesn't hide mouse pointer on keypress
https://bugs.webkit.org/show_bug.cgi?id=53821
Summary
WebKit2 doesn't hide mouse pointer on keypress
Darin Adler
Reported
2011-02-04 15:43:52 PST
WebKit2 doesn't hide mouse pointer on keypress
Attachments
Patch
(7.72 KB, patch)
2011-02-04 15:47 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-02-04 15:47:50 PST
Created
attachment 81311
[details]
Patch
mitz
Comment 2
2011-02-04 15:55:43 PST
Comment on
attachment 81311
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=81311&action=review
> Source/WebKit2/UIProcess/API/mac/PageClientImpl.mm:314 > if ([nativeEvent type] == NSKeyDown) {
Perhaps the test should be reversed and an early return added so that the entire body is not indented.
Darin Adler
Comment 3
2011-02-04 16:11:10 PST
Committed
r77694
: <
http://trac.webkit.org/changeset/77694
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug